--- a/package.json
+++ b/package.json
@@ -1,29 +1,36 @@
 {
-  "name": "myportfolio",
-  "version": "0.1.0",
-  "private": true,
+  "name": "homepage",
+  "version": "1.0.0",
+  "description": "",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
+  "keywords": [],
+  "author": "",
+  "license": "",
   "dependencies": {
-    "@types/react-dom": "18.2.5",
-    "autoprefixer": "10.4.14",
-    "eslint": "8.43.0",
-    "eslint-config-next": "13.4.6",
+    "@chakra-ui/icons": "^2.0.15",
+    "@chakra-ui/react": "^2.4.6",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "framer-motion": "^8.4.0",
     "next": "12.3.0",
     "postcss": "8.4.24",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
     "three": "^0.153.0"
   },
   "devDependencies": {
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
-    "@types/three": "^0.152.1",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
+    "prettier": "^2.8.2",
     "typescript": "5.1.3"
   }
 }
